--- a/coming-soon.html
+++ b/coming-soon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram Coming Soon | <span translate="no" class="notranslate">DH Phone</span></title>
+    <title>Instagram Coming Soon | DH Phone</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
@@ -260,7 +260,7 @@
     <footer class="bg-gray-900 text-white mt-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 sm:py-8">
             <div class="text-center">
-                <h3 class="text-lg font-bold mb-2">🛍️ <span translate="no" class="notranslate">DH Phone</span></h3>
+                <h3 class="text-lg font-bold mb-2">🛍️ DH Phone</h3>
                 <p class="text-gray-300 mb-4 text-sm sm:text-base">Your trusted partner for all your phone needs</p>
                 <div class="flex justify-center space-x-4 sm:space-x-6">
                     <a href="https://www.facebook.com/profile.php?id=100058599200790" target="_blank" class="text-gray-400 hover:text-white transition-colors p-2">
@@ -279,7 +279,7 @@
                     </a>
                 </div>
                 <div class="mt-4 sm:mt-6 pt-4 sm:pt-6 border-t border-gray-800">
-                    <p class="text-xs sm:text-sm text-gray-400">© 2025 <span translate="no" class="notranslate">DH Phone</span>. All rights reserved.</p>
+                    <p class="text-xs sm:text-sm text-gray-400">© 2025 DH Phone. All rights reserved.</p>
                 </div>
             </div>
         </div>
