--- a/landing-page.html
+++ b/landing-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-en="Featured Products | <span translate=\"no\" class=\"notranslate\">DH Phone</span>" data-fr="Produits Vedettes | <span translate=\"no\" class=\"notranslate\">DH Phone</span>" data-ar="المنتجات المميزة | <span translate=\"no\" class=\"notranslate\">DH Phone</span>">Featured Products | <span translate="no" class="notranslate">DH Phone</span></title>
+    <title data-en="Featured Products | DH Phone" data-fr="Produits Vedettes | DH Phone" data-ar="المنتجات المميزة | DH Phone">Featured Products | DH Phone</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Firebase Configuration -->
@@ -372,7 +372,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-6 md:gap-8">
                 <!-- Company Info -->
                 <div class="col-span-1 md:col-span-2">
-                    <h3 class="text-lg md:text-xl font-bold mb-3 md:mb-4">🛍️ <span translate="no" class="notranslate">DH Phone</span></h3>
+                    <h3 class="text-lg md:text-xl font-bold mb-3 md:mb-4">🛍️ DH Phone</h3>
                     <p class="text-sm md:text-base text-gray-300 mb-3 md:mb-4">Your trusted partner for all your phone needs. Quality products, excellent service, and unbeatable prices.</p>
                     <div class="flex space-x-3 md:space-x-4">
                         <!-- Facebook Icon -->
@@ -417,7 +417,7 @@
             <div class="border-t border-gray-800 mt-6 md:mt-8 pt-6 md:pt-8">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <p class="text-xs md:text-sm text-gray-400 text-center md:text-left">
-                        © 2025 <span translate="no" class="notranslate">DH Phone</span>. All rights reserved.
+                        © 2025 DH Phone. All rights reserved.
                     </p>
                     <div class="flex items-center space-x-2 mt-3 md:mt-0">
                         <span class="text-xs md:text-sm text-gray-400">Made with</span>
@@ -445,42 +445,12 @@
         if (localStorage.getItem('theme') === 'dark') {
             html.classList.add('dark');
         }
-        // Mobile menu animation logic for landing-page
+        // Mobile menu toggle
         const mobileMenuButton = document.getElementById('mobile-menu-button');
         const mobileMenu = document.getElementById('mobile-menu');
-        const mobileMenuClose = document.getElementById('mobile-menu-close');
-
-        function openMobileMenu() {
-          if (mobileMenu) {
-            mobileMenu.classList.remove('hidden', 'menu-slide-out');
-            void mobileMenu.offsetWidth;
-            mobileMenu.classList.add('menu-slide-in');
-          }
-        }
-        function closeMobileMenu() {
-          if (mobileMenu) {
-            mobileMenu.classList.remove('menu-slide-in');
-            mobileMenu.classList.add('menu-slide-out');
-            mobileMenu.addEventListener('animationend', function handler() {
-              mobileMenu.classList.add('hidden');
-              mobileMenu.classList.remove('menu-slide-out');
-              mobileMenu.removeEventListener('animationend', handler);
-            });
-          }
-        }
-        function toggleMobileMenu() {
-          if (mobileMenu.classList.contains('hidden')) {
-            openMobileMenu();
-          } else {
-            closeMobileMenu();
-          }
-        }
-        if (mobileMenuButton) {
-          mobileMenuButton.addEventListener('click', toggleMobileMenu);
-        }
-        if (mobileMenuClose) {
-          mobileMenuClose.addEventListener('click', closeMobileMenu);
-        }
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
         // Language dropdown functionality
         const languageToggle = document.getElementById('language-toggle');
         const languageDropdown = document.getElementById('language-dropdown');
