--- a/landing-page.html
+++ b/landing-page.html
@@ -294,10 +294,10 @@
         </nav>
     </header>
     <!-- Main Content -->
-    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 md:py-12">
+    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-16">
         <!-- Page Title -->
-        <section class="text-center mb-4 md:mb-8 animate-fade-in">
-            <h1 class="text-2xl md:text-4xl lg:text-5xl font-bold mb-3 md:mb-6 bg-gradient-to-r from-primary-600 to-secondary-600 bg-clip-text text-transparent" data-en="Featured Products" data-fr="Produits Vedettes" data-ar="المنتجات المميزة">Featured Products</h1>
+        <section class="text-center mb-8 md:mb-12 animate-fade-in">
+            <h1 class="text-2xl md:text-4xl lg:text-5xl font-bold mb-3 md:mb-6 bg-gradient-to-r from-primary-600 via-secondary-600 to-primary-700 bg-clip-text text-transparent" data-en="Featured Products" data-fr="Produits Vedettes" data-ar="المنتجات المميزة">Featured Products</h1>
             <p class="text-sm md:text-lg text-gray-600 dark:text-gray-400 max-w-2xl mx-auto" data-en="Discover our featured collection of high-quality tech products" data-fr="Découvrez notre collection vedette de produits technologiques de haute qualité" data-ar="اكتشف مجموعتنا المميزة من منتجات التكنولوجيا عالية الجودة">Discover our featured collection of high-quality tech products</p>
         </section>
         <!-- Search and Category Filters -->
@@ -319,7 +319,7 @@
         <div class="flex-1">
             <div id="product-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-8">
                 <!-- Skeleton Loaders -->
-                <div class="product-card bg-white dark:bg-slate-800 rounded-xl overflow-hidden shadow-lg">
+                <div class="product-card bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2">
                     <div class="h-40 md:h-48 skeleton"></div>
                     <div class="p-4 md:p-6">
                         <div class="h-5 md:h-6 skeleton rounded mb-3 md:mb-4"></div>
@@ -330,7 +330,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="product-card bg-white dark:bg-slate-800 rounded-xl overflow-hidden shadow-lg">
+                <div class="product-card bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2">
                     <div class="h-40 md:h-48 skeleton"></div>
                     <div class="p-4 md:p-6">
                         <div class="h-5 md:h-6 skeleton rounded mb-3 md:mb-4"></div>
@@ -341,7 +341,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="product-card bg-white dark:bg-slate-800 rounded-xl overflow-hidden shadow-lg">
+                <div class="product-card bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2">
                     <div class="h-40 md:h-48 skeleton"></div>
                     <div class="p-4 md:p-6">
                         <div class="h-5 md:h-6 skeleton rounded mb-3 md:mb-4"></div>
@@ -352,7 +352,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="product-card bg-white dark:bg-slate-800 rounded-xl overflow-hidden shadow-lg">
+                <div class="product-card bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2">
                     <div class="h-40 md:h-48 skeleton"></div>
                     <div class="p-4 md:p-6">
                         <div class="h-5 md:h-6 skeleton rounded mb-3 md:mb-4"></div>
@@ -956,7 +956,7 @@
                     const currency = product.priceRange.minVariantPrice.currencyCode;
                     const image = product.images.edges[0]?.node || { url: '', altText: 'Product image' };
                     const productCard = document.createElement('div');
-                    productCard.className = 'product-card bg-white dark:bg-slate-800 rounded-xl overflow-hidden shadow-lg animate-slide-up';
+                    productCard.className = 'product-card bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 animate-slide-up';
                     productCard.style.animationDelay = `${index * 0.1}s`;
                     productCard.innerHTML = `
                         <div class="h-40 md:h-48 flex items-center justify-center overflow-hidden product-image">
@@ -969,7 +969,6 @@
                         </div>
                         <div class="p-4 md:p-6">
                             <h3 class="text-lg md:text-xl font-bold mb-2">${product.title}</h3>
-                            <p class="text-gray-600 dark:text-gray-400 mb-3 md:mb-4 text-xs md:text-sm">${product.description.substring(0, 80)}${product.description.length > 80 ? '...' : ''}</p>
                             <div class="flex justify-between items-center mt-4 md:mt-6">
                                 <span class="price-tag text-sm md:text-base">${currency} ${price}</span>
                                 <button class="px-3 py-2 md:px-4 md:py-2 bg-gradient-to-r from-primary-600 to-primary-700 text-white rounded-lg hover:from-primary-700 hover:to-primary-800 transition btn-primary text-xs md:text-sm font-medium order-now-btn" data-handle="${product.handle}">
@@ -1005,7 +1004,6 @@
                 // Filter products by search term only
                 filteredProducts = allProducts.filter(product => {
                     return product.title.toLowerCase().includes(searchTerm) || 
-                           product.description.toLowerCase().includes(searchTerm) ||
                            product.productType.toLowerCase().includes(searchTerm);
                 });
                 renderProducts(filteredProducts);
